:rotating_light: 사파리에서 원형 이미지 표시가 안되는 버그 수정

--- a/src/components/bio/style.scss
+++ b/src/components/bio/style.scss
@@ -102,10 +102,11 @@
 
   .thumbnail-wrapper {
     display: none;
-    border-radius: 70%;
-
     @include md {
       display: block;
+    }
+    picture > img {
+      border-radius: 50%;
     }
   }
 }
